--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   flutter_screenutil: ^5.5.3+2
+  kakao_flutter_sdk: ^1.1.1
+  kakao_flutter_sdk_common: ^1.1.1
 
 dev_dependencies:
   flutter_test:
